--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./scss/style.css">
+    <link rel="stylesheet" href="./scss/swiper.css">
+    <link rel="stylesheet" href="./css/style.css">
+
     <title>Document</title>
 </head>
+
 <body>
-    
+    <div class="container">
+        <div class="header">
+            <img src="./images/head1.png" alt="">
+            <img src="./images/head2.png" alt="">
+        </div>
+        <div class="main">
+            <div class="main-wrapper">
+                <div class="main-head">
+                    <div class="swiper-container">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide">
+                                <img src="./images/main1.png" alt="">
+                            </div>
+                            <div class="swiper-slide">
+                                <img src="./images/1 (1).jpg" alt="">
+                            </div>
+                            <div class="swiper-slide">
+                                <img src="./images/1 (2).jpg" alt="">
+                            </div>
+                            <div class="swiper-slide">
+                                <img src="./images/1 (3).jpg" alt="">
+                            </div>
+                        </div>
+                        <div class="swiper-pagination"></div>
+                    </div>
+                    <!-- <img src="./images/main1.png" alt=""> -->
+                </div>
+                <div class="main-title">
+
+                </div>
+                <div class="main-content">
+                    
+                </div>
+            </div>
+        </div>
+        <div class="footer"></div>
+    </div>
 </body>
 <script src="./libs/axios.js"></script>
 <script src="./libs/flexible.js"></script>
+<script src="./libs/better-scroll.js"></script>
 <script src="./libs/mock.js"></script>
+<script src="./libs/swiper.js"></script>
 <script src="./js/index.js"></script>
+
 </html>
